[package]
authors = [
    "Michael Daffin <michael@daffin.io>",
    "Philipp Oppermann <dev@phil-opp.com>",
    "Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
    "Marc Brinkmann"
]
keywords = ["arm", "bare-metal", "blink", "lm4f120", "launchpad"]
license = "MIT"
name = "stellaris-launchpad"
readme = "README.md"
version = "0.11.2"
description = "A bare-metal crate supporting the Texas Instruments Stellaris LM4F120 Launchpad (and most likely the Tiva-C TM4C120 Launchpad too)"
repository = "https://github.com/thejpster/stellaris-launchpad"
categories = ["hardware-support"]
homepage = "https://www.thejpster.org.uk"

[profile.release]
codegen-units = 1
lto = true
debug = true
#opt-level = "s"

[dependencies]
cast = { version = "=0.2.3", default-features = false }
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
volatile-register = "0.2"
embedded-hal = "0.2.4"
tm4c123x-hal = "0.10.2"
alloc-cortex-m = "0.4.1"
numtoa = "0.2.3"
hd44780-driver = "0.4.0"
chess-engine = { path = "../chess-engine/" }
keypad = "0.1.4"
arrayvec = { version = "0.7.0", default-features = false }
mfrc522 = "0.2.0"

[badges]
travis-ci = { repository = "thejpster/stellaris-launchpad", branch = "master" }
